<resources>
    <string name="app_name">QOCRapp</string>
    <string name="study_note">Study Note</string>
    <string name="summary">Summary</string>
    <string name="keywords">Keywords</string>
    <string name="outline">Outline</string>
    <string name="translate">Translate</string>
    <string name="solve">Solve</string>
    <string name="unknown">Unknown</string>
    <string name="generate">Generate</string>
    <string name="free_text">Free Text</string>
    <string name="gen_question">Generate Question</string>
    <string name="translate_into">Translate into what language?</string>
    <string name="insert_any_command">Insert any command to the AI</string>

    <string name="rearrange">Rearrange the text and then </string>
    <string name="study_note_action">Create Study Note from this</string>
    <string name="summary_action">Create Summary from this</string>
    <string name="keywords_action">Create Keywords from this</string>
    <string name="outline_action">Create outline from this</string>
    <string name="translate_action">Rearrange the text and then</string>
    <string name="solve_action">Solve this problem</string>
    <string name="gen_question_action">Generate questions</string>
    <string name="unknown_action">Unknown and then remove unknown word</string>
</resources>
